# raworc

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.host  Dockerfile.host-minimal  Dockerfile.operator  Dockerfile.server  README.md  docker-compose.yml  quick-rebuild-operator.sh  test-api.sh  test-docker.sh  test-results-service-accounts.md  test-service-accounts.sh  test_api.sh  test_readme_commands.sh
.github/workflows/: deploy-docs.yml  preview-docs.yml
.sqlx/: query-55eafbf16440bb11929344caefa0b59941d8d6a4e39140bbb295645a1b794831.json
db/: 20250813000000_complete_schema.sql
docs/: NAMESPACE_ARCHITECTURE.md  README.md  agent-testing-plan.md  build-command.md  cli-api-examples.md  configuration.md  index.md  postgresql-setup.md  quickstart.md  rbac.md  rest-api.md
docs/graphql/: README.md  examples.md  permissions.md  schema.graphql  security.md
k8s/: README.md  deploy.sh  uninstall.sh
k8s/surrealdb/: surrealdb-deployment.yaml  surrealdb-ingress.yaml  surrealdb-lb.yaml  surrealdb-service.yaml
k8s/tikv/: tikv-cluster.yaml  tikv-external-service.yaml  tikv-nodeport-service.yaml
kube/: README.md  deploy.sh
migrations/: 002_create_agents_table.sql  20240101120000_create_rbac_tables.sql  20240103120000_create_sessions_table.sql  20240104120000_update_service_accounts_fields.sql  20250107000000_fix_namespace_architecture.sql  20250806000000_complete_schema.sql  20250806000000_initial_schema.sql  README.md
scripts/: migrate-existing-db.sh  reset_database.sh
src/: auth.rs  cli_auth.rs  cli_connect.rs  database.rs  logging.rs  main.rs  models.rs  rbac.rs
src/builder/: mod.rs
src/docker/: client.rs  container.rs  lifecycle.rs  mod.rs  volume.rs
src/graphql/: handlers.rs  mod.rs  schema.rs  server.rs
src/host/: api.rs  claude.rs  config.rs  error.rs  guardrails.rs  main.rs.old  message_handler.rs  mod.rs  todo.rs
src/models/: agent.rs  mod.rs  session.rs
src/operator/: docker_manager.rs  mod.rs  session_manager.rs
src/rest/: auth.rs  error.rs  middleware.rs  (+6 more)
website/: docusaurus.config.ts  sidebars.ts
(+42 files in other folders)
