[package]
name = "raworc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# tower_governor = "0.4"  # Removed for now
anyhow = "1.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
ctrlc = "3.4"
# daemonize = "0.5"  # Moved to Unix-only dependencies
reqwest = { version = "0.12", features = ["json"] }
rustyline = { version = "14.0", features = ["derive"] }
dirs = "5.0"
rpassword = "7.3"
serde_json = "1.0"
serde_yaml = "0.9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
bollard = "0.17"
futures = "0.3.31"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
